fix(global.css): Avoid line wrap on highlight, because presudo element cant adapt line wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,7 @@
   }
 
   .highlight {
-    @apply relative;
+    @apply relative whitespace-nowrap;
   }
 
   .highlight::after {
